convertx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: convertx
  namespace: app-dev
spec:
  selector:
    app: convertx
  ports:
    - port: 80
      targetPort: 3000
