convertx/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: convertx
  namespace: app-dev
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`convert.lab-hc.cloud`)
      kind: Rule
      services:
        - name: convertx
          port: 80
